--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,9 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 MESSAGE("Installation prefix set to " ${CMAKE_INSTALL_PREFIX} )
 
+MESSAGE("CMAKE_LANGUAGES_COMPILER_ENV_VAR: " ${CMAKE_LANGUAGES_COMPILER_ENV_VAR})
+MESSAGE("CMAKE_LANGUAGES_COMPILER: " ${CMAKE_LANGUAGES_COMPILER})
+
 add_subdirectory(Core/src)
 add_subdirectory(HTauTau)
 
